set(gui_sources

    ./Provider.hpp
    ./StdIcons.hpp
    ./StdIcons.cpp
    ./UInt64Mapper.cpp
    ./UInt64Mapper.hpp
    
    ./delegate/ColorComboDelegate.hpp
    ./delegate/ColorComboDelegate.ipp
    ./delegate/ColorDelegate.hpp
    ./delegate/ColorDelegate.ipp
    ./delegate/DateDelegate.hpp
    ./delegate/DateDelegate.ipp
    ./delegate/DateTimeDelegate.hpp
    ./delegate/DateTimeDelegate.ipp
    ./delegate/Delegate.hpp
    ./delegate/Delegate.ipp
    ./delegate/DelegateImpl.hpp
    ./delegate/DelegateUnity.cpp
    ./delegate/DirDelegate.hpp
    ./delegate/DirDelegate.ipp
    ./delegate/DoubleDelegate.hpp
    ./delegate/DoubleDelegate.ipp
    ./delegate/EnumDelegate.hpp
    ./delegate/EnumDelegate.ipp
    ./delegate/FileDelegate.hpp
    ./delegate/FileDelegate.ipp
    ./delegate/IconBarDelegate.hpp
    ./delegate/IconBarDelegate.ipp
    ./delegate/ImageDelegate.hpp
    ./delegate/ImageDelegate.ipp
    ./delegate/IntegerDelegate.hpp
    ./delegate/IntegerDelegate.ipp
    ./delegate/StringComboDelegate.hpp
    ./delegate/StringComboDelegate.ipp
    ./delegate/StringDelegate.hpp
    ./delegate/StringDelegate.ipp
    ./delegate/UIntegerDelegate.hpp
    ./delegate/UIntegerDelegate.ipp

    ./edit/CheckBox.hpp
    ./edit/CheckBox.ipp
    ./edit/ColorChip.hpp
    ./edit/ColorChip.ipp
    ./edit/ComboBox.hpp
    ./edit/ComboBox.ipp
    ./edit/ColorCombo.hpp
    ./edit/ColorCombo.ipp
    ./edit/DateEdit.hpp
    ./edit/DateEdit.ipp
    ./edit/DateTimeEdit.hpp
    ./edit/DateTimeEdit.ipp
    ./edit/DateTimeWidget.hpp
    ./edit/DateTimeWidget.ipp
    ./edit/DateWidget.hpp
    ./edit/DateWidget.ipp
    ./edit/DirBox.hpp
    ./edit/DirBox.ipp
    ./edit/DoubleSpinBox.hpp
    ./edit/DoubleSpinBox.ipp
    ./edit/EditUnity.cpp
    ./edit/EnumCombo.hpp
    ./edit/EnumCombo.ipp
    ./edit/FileBox.hpp
    ./edit/FileBox.ipp
    ./edit/GenericEnumCombo.hpp
    ./edit/LineEdit.hpp
    ./edit/LineEdit.ipp
    ./edit/SpinBox.hpp
    ./edit/SpinBox.ipp
    ./edit/StringSetCheck.hpp
    ./edit/StringSetCheck.ipp
    ./edit/TextEdit.hpp
    ./edit/TextEdit.ipp
    ./edit/UShortSetEdit.hpp
    ./edit/UShortSetEdit.ipp

    ./layout/FlowLayout.cpp
    ./layout/FlowLayout.hpp

    ./main/MainUnity.cpp
    ./main/MainWin.hpp
    ./main/MainWin.ipp
    ./main/SimpleEditor.hpp
    ./main/SimpleEditor.ipp
    ./main/SubWin.hpp
    ./main/SubWin.ipp
    ./main/UndoMain.hpp
    ./main/UndoMain.ipp
    ./main/UndoWin.hpp
    ./main/UndoWin.ipp

    ./model/StdColumn.hpp
    ./model/StdTableModel.hpp
    ./model/StdTableModelImpl.hpp
    ./model/U64TableModel.hpp

    ./undo/UndoAction.hpp
    ./undo/UndoAction.ipp
    ./undo/UndoBase.hpp
    ./undo/UndoBase.ipp
    ./undo/UndoCallback.hpp
    ./undo/UndoUnity.cpp

    ./validator/IdentifierValidator.hpp
    ./validator/IdentifierValidator.ipp
    ./validator/KeyValidator.hpp
    ./validator/KeyValidator.ipp
    ./validator/NoSpacesValidator.hpp
    ./validator/NoSpacesValidator.ipp
    ./validator/UShortSetValidator.hpp
    ./validator/UShortSetValidator.ipp
    ./validator/ValidatorUnity.cpp
    ./validator/XmlIdentifierValidator.hpp
    ./validator/XmlIdentifierValidator.ipp

    ./view/SimpleTable.cpp
    ./view/SimpleTable.hpp
    ./view/SqlTableView.cpp
    ./view/SqlTableView.hpp
    ./view/StdListView.hpp
    ./view/StdTableView.hpp

    ./widget/DrawRuler.hpp
    ./widget/DrawRuler.ipp
    ./widget/GridTickModel.hpp
    ./widget/GridTickModel.ipp
    ./widget/FormWidget.hpp
    ./widget/FormWidget.ipp
    ./widget/StandardGridTickModel.hpp
    ./widget/TabWidget.hpp
    ./widget/TabWidget.ipp
    ./widget/TabWidgetBar.hpp
    ./widget/TabWidgetBar.ipp
    ./widget/WidgetUnity.cpp
)

add_library(yqgui SHARED ${gui_sources})
target_link_libraries(yqgui 
    PUBLIC 
        yqutil 
        yqmeta 
        Qt5::Gui 
        Qt5::Sql
        Qt5::Widgets
)

